--- a/BookAppoinment.IntegrationTests/BookAppoinment.IntegrationTests.csproj
+++ b/BookAppoinment.IntegrationTests/BookAppoinment.IntegrationTests.csproj
@@ -21,11 +21,16 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.22" />
     <PackageReference Include="Serilog" Version="3.0.1" />
-    <PackageReference Include="LanguageExt.Core" Version="4.4.4" />
+    <PackageReference Include="LanguageExt.Core" Version="4.4.5" />
     <PackageReference Include="FluentMigrator" Version="3.3.2" />
     <PackageReference Include="FluentMigrator.Runner" Version="3.3.2" />
     <PackageReference Include="FluentMigrator.Runner.MySql" Version="3.3.2" />
     <PackageReference Include="MySqlConnector" Version="2.2.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
