feature/adding automapper

--- a/BookAppoinment.Migrations/BookAppoinment.Migrations.csproj
+++ b/BookAppoinment.Migrations/BookAppoinment.Migrations.csproj
@@ -24,6 +24,8 @@
     <PackageReference Include="LanguageExt.Core" Version="4.4.5" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Databases\Seeder\M20230921006_InitialSeeder.sql">
