--- a/BookAppoinment.Adapters/BookAppoinment.Adapters.csproj
+++ b/BookAppoinment.Adapters/BookAppoinment.Adapters.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="LanguageExt.Core" Version="4.4.5" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Repositories\" />
