--- a/BookAppoinment.Domain.UnitTests/BookAppoinment.Domain.UnitTests.csproj
+++ b/BookAppoinment.Domain.UnitTests/BookAppoinment.Domain.UnitTests.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -32,6 +32,24 @@
     <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.22" />
+    <PackageReference Include="Divergic.Logging.Xunit" Version="4.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Appointment\" />
+    <None Remove="Appointment\Command\" />
+    <None Remove="Appointment\Queries\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Appointment\" />
+    <Folder Include="Appointment\Command\" />
+    <Folder Include="Appointment\Queries\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BookAppoinment.Adapters\BookAppoinment.Adapters.csproj" />
+    <ProjectReference Include="..\BookAppoinment\BookAppoinment.csproj" />
+    <ProjectReference Include="..\BookAppoinment.Migrations\BookAppoinment.Migrations.csproj" />
+    <ProjectReference Include="..\BookAppoinment.Domain\BookAppoinment.Domain.csproj" />
+  </ItemGroup>
 </Project>
