--- a/BookAppoinment.IntegrationTests/BookAppoinment.IntegrationTests.csproj
+++ b/BookAppoinment.IntegrationTests/BookAppoinment.IntegrationTests.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.22" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,5 +46,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BookAppoinment\BookAppoinment.csproj" />
+    <ProjectReference Include="..\BookAppoinment.Adapters\BookAppoinment.Adapters.csproj" />
   </ItemGroup>
 </Project>
